# gal

./: .gitmodules  README.md  azure-pipelines.yml
bins/: Cargo.toml
bins/gal-gui/: index.html
bins/gal-gui/src-tauri/src/: main.rs
bins/gal-gui/src/components/: Live2D.vue
bins/gal-gui/src/live2d/Framework/: cubismdefaultparameterid.js  cubismdefaultparameterid.js.map  cubismframeworkconfig.js  cubismframeworkconfig.js.map  cubismmodelsettingjson.d.ts.map  cubismmodelsettingjson.js  cubismmodelsettingjson.js.map  icubismallcator.js  icubismallcator.js.map  icubismmodelsetting.js  icubismmodelsetting.js.map  live2dcubismframework.js  live2dcubismframework.js.map
bins/gal-gui/src/live2d/Framework/effect/: cubismbreath.js  cubismbreath.js.map  cubismeyeblink.js  cubismeyeblink.js.map  cubismpose.d.ts.map  cubismpose.js  cubismpose.js.map
bins/gal-gui/src/live2d/Framework/id/: cubismid.js  cubismid.js.map  cubismidmanager.d.ts.map  cubismidmanager.js  cubismidmanager.js.map
bins/gal-gui/src/live2d/Framework/math/: cubismmath.js  cubismmath.js.map  cubismmatrix44.d.ts.map  cubismmatrix44.js  cubismmatrix44.js.map  cubismmodelmatrix.js  cubismmodelmatrix.js.map  cubismtargetpoint.js  cubismtargetpoint.js.map  cubismvector2.js  cubismvector2.js.map  cubismviewmatrix.js  cubismviewmatrix.js.map
bins/gal-gui/src/live2d/Framework/model/: cubismmoc.d.ts  cubismmoc.d.ts.map  cubismmoc.js  cubismmoc.js.map  cubismmodel.d.ts  cubismmodel.d.ts.map  cubismmodel.js  cubismmodel.js.map  cubismmodeluserdata.js  cubismmodeluserdata.js.map  cubismmodeluserdatajson.js  cubismmodeluserdatajson.js.map  cubismusermodel.d.ts.map  cubismusermodel.js  cubismusermodel.js.map
bins/gal-gui/src/live2d/Framework/motion/: acubismmotion.d.ts.map  acubismmotion.js  acubismmotion.js.map  cubismexpressionmotion.js  cubismexpressionmotion.js.map  cubismmotion.d.ts.map  cubismmotion.js  cubismmotion.js.map  cubismmotioninternal.d.ts.map  cubismmotioninternal.js  cubismmotioninternal.js.map  cubismmotionjson.js  cubismmotionjson.js.map  cubismmotionmanager.js  cubismmotionmanager.js.map  cubismmotionqueueentry.js  cubismmotionqueueentry.js.map  cubismmotionqueuemanager.d.ts.map  cubismmotionqueuemanager.js  cubismmotionqueuemanager.js.map
bins/gal-gui/src/live2d/Framework/physics/: cubismphysics.d.ts  cubismphysics.d.ts.map  cubismphysics.js  cubismphysics.js.map  cubismphysicsinternal.d.ts  (+7 more)
bins/gal-latex/src/: main.rs
bins/gal-native/: Cargo.toml  cbindgen.toml
bins/gal-native/src/: lib.rs
bins/gal-qt/: CMakeLists.txt
bins/gal-qt/include/: interop.hpp
bins/gal-qt/src/: interop.cpp  main.cpp
bins/gal/src/: main.rs
gal-primitive/: Cargo.toml
gal-primitive/src/: lib.rs
gal-runtime/: Cargo.toml
gal-runtime/src/: script.rs
gal-script/src/: lib.rs
gal-script/src/exec/: grammer.lalrpop
plugins/: Cargo.toml
plugins/format/src/: lib.rs
plugins/htmlpage/: Cargo.toml
plugins/htmlpage/src/: lib.rs
plugins/media/src/: lib.rs
plugins/random/: Cargo.toml
plugins/random/src/: lib.rs
plugins/timer/: Cargo.toml
plugins/timer/src/: lib.rs
utils/gal-bindings-impl/src/: lib.rs
utils/gal-bindings-types/src/: lib.rs
utils/gal-bindings/src/: lib.rs
utils/gal-runtime/: Cargo.toml
utils/gal-runtime/src/: context.rs  plugin.rs  script.rs
(+23 files in other folders)
