cargo-features = ["per-package-target"]

[package]
name = "htmlpage"
version = "0.1.0"
edition = "2021"
forced-target = "wasm32-wasi"

[lib]
crate-type = ["cdylib"]

[dependencies]
gal-bindings = { path = "../../utils/gal-bindings" }
yew = { git = "https://github.com/yewstack/yew/", features = ["ssr"] }
wasm-rs-async-executor = "0.9"
